[metadata]
name = brainorganoid
version = 1.0.0
description = Brain organoid project
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires = 
    numpy == 2.1.3
    pandas == 2.2.3
    matplotlib == 3.9.2
    mne == 1.8.0
    scikit-learn == 1.5.2
    icecream == 2.1.3
    openpyxl == 3.1.5
    statsmodels == 0.14.4